c/examples/writing-a-c-compiler-tests/tests/chapter_16/valid/strings_as_initializers/simple.c
int main(void) {
    // simple test of initializing and subscripting char array
    unsigned char chars[4] = "abc";
    return chars[2];
}