c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/string_initializer_wrong_type.c
/* String literals can only initialize char arrays,
 * not arrays of other types */
int main(void) {
    long ints[4] = "abc";
    return ints[1];
}